--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         			color: "#F4FFF0" // vert très très pâle
     			},
     			"DAJE": {
-        			description: "Le film peut être vu par des personnes de tout âge.<br>Des passages peuvent perturber les enfants de moins de 8 ans.",
+        			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // même vert très très pâle
     			},
     			"Déconseillé aux jeunes enfants": {
-        			description: "Le film peut être vu par des personnes de tout âge.<br>Des passages peuvent perturber les enfants de moins de 8 ans.",
+        			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // même vert très très pâle
     			}
 			};
