--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         						}
 
         						if (ratingDetails[film.classification]) {
-            						classificationDetails = ratingDetails[film.classification].description;
+            						classificationDetails = ratingDetails[film.classification].description + " ";
             						classificationColor = ratingDetails[film.classification].color;
         						}
     						}
