--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
 			// ✅ Définition unique des mots-clés
 			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erostisme", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDetails = {
-	  			"G": {
-        			description: "Le film peut être vu par des personnes de tout âge.",
-        			color: "#F4FFF0" // même vert très très pâle
-    			},
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
         			color: "#FFFBE0" // jaune très très pâle
@@ -86,11 +82,11 @@
         			color: "#F4FFF0" // vert très très pâle
     			},
     			"DAJE": {
-        			description: "Des passages peuvent perturber les enfants de moins de 8 ans.",
+        			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // même vert très très pâle
     			},
     			"Déconseillé aux jeunes enfants": {
-        			description: "Des passages peuvent perturber les enfants de moins de 8 ans.",
+        			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // même vert très très pâle
     			}
 			};
