--- a/index.html
+++ b/index.html
@@ -63,31 +63,39 @@
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
-			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erostisme", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
+			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erostisme", "EDC", "Exempté de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
-        			color: "#FFFBE0" // jaune très très pâle
+        			color: "#FFFBE0" // jaune très pâle
     			},
     			"16+": {
         			description: "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
-        			color: "#EEF7FF" // bleu très très pâle
+        			color: "#EEF7FF" // bleu très pâle
     			},
     			"18+": {
         			description: "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-        			color: "#FFECEC" // rouge très très pâle
+        			color: "#FFECEC" // rouge très pâle
     			},
     			"Pour Enfants": {
         			description: "Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
         			color: "#F4FFF0" // vert très très pâle
     			},
-    			"DAJE": {
+				"EDC": {
+        			description: "Exemptés de classement",
+        			color: "#EEEEEE" // gris très pâle
+    			},
+				"Exempté de classement": {
+        			description: "Exemptés de classement",
+        			color: "#EEEEEE" // gris très pâle
+    			},
+				"DAJE": {
         			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#F4FFF0" // même vert très très pâle
+        			color: "#F4FFF0" // vert très pâle
     			},
     			"Déconseillé aux jeunes enfants": {
         			description: "Le film peut être vu par des personnes de tout âge. Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#F4FFF0" // même vert très très pâle
+        			color: "#F4FFF0" // vert très pâle
     			}
 			};
 	
