--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     				base = "GDeconseilleauxjeunesenfants";
 				}
 
-				if (base === "EDC") {
+				if (base === "ECEDC") {
     				base = "ECExempteDeClassement";
 				}
 
