--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         			color: "#F4FFF0" // vert très très pâle
     			},
 				"EDC": {
-        			description: "Exemptés de classement",
+        			description: "Exempté de classement",
         			color: "#EEEEEE" // gris très pâle
     			},
 				"Exempté de classement": {
-        			description: "Exemptés de classement",
+        			description: "Exempté de classement",
         			color: "#EEEEEE" // gris très pâle
     			},
 				"DAJE": {
