--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				}
 
 				if (base === "ECEDC") {
-    				base = "ECExempteDeClassement";
+    				base = "ECExemptedeclassement";
 				}
 
     			// ✅ Ajout de la vérification pour éviter base vide
