--- a/index.html
+++ b/index.html
@@ -502,8 +502,11 @@
 						// console.log(`📅 Aujourd'hui à Toronto : ${aujourdHuiStr}`);
 						// console.log(`⏰ Heure actuelle : ${currentHour}:${currentMinute}`);
 
+						if data._meta?.next_show_date
+						
 						// ✅ Vérifier si le film n'est pas encore sorti et qu'aucun film n'est aussi avant la date de sortie
-						if (aujourdHuiStr < film.OpeningDate && data._meta?.next_show_date < film.OpeningDate) {
+						//if (aujourdHuiStr < film.OpeningDate && data._meta?.next_show_date < film.OpeningDate) {
+						if (data._meta?.next_show_date && data._meta.next_show_date < film.OpeningDate) {
     						const bande = document.createElement("div");
     						bande.className = "jour-label bientot-affiche-banner";
     						bande.innerHTML = `
