--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
+			let ratingDetails = {};
+			let motsCles = [];
 			fetch('classification/classification.json')
   				.then(response => response.json())
   				.then(data => {
