--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 
 <html lang="fr-CA">
 <head>
@@ -67,27 +67,27 @@
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
-        			color: "#FFFBE0" // jaune très très pâle
+        			color: "#FFFBE0" // jaune pâle
     			},
     			"16+": {
         			description: "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
-        			color: "#EEF7FF" // bleu très très pâle
+        			color: "#EEF7FF" // bleu pâle
     			},
     			"18+": {
         			description: "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-        			color: "#FFECEC" // rouge très très pâle
+        			color: "#FFECEC" // rouge pâle
     			},
     			"Pour Enfants": {
         			description: "Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
-        			color: "#F4FFF0" // vert très très pâle
+        			color: "#F4FFF0" // vert pâle
     			},
     			"DAJE": {
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#F4FFF0" // même vert très très pâle
+        			color: "#F4FFF0" // vert pâle
     			},
     			"Déconseillé aux jeunes enfants": {
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#F4FFF0" // même vert très très pâle
+        			color: "#F4FFF0" // vert pâle
     			}
 			};
 	
