--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     			// Découpage par "|", nettoyage et filtrage
 				// console.log("Titre du film :", film.titre);
     			// const contenuFiltre = contenu
-				const contenuFiltre = contenuAvecStyle
+				const contenuFiltre = contenuAvecStyles
         			.split("|")
         			.map((champ) => champ.trim())
         			.filter((champ) => champ !== "" && !motsInterdits.includes(champ));
