--- a/index.html
+++ b/index.html
@@ -445,11 +445,24 @@
   							const originalText = film.synopsis;
 
   							// Trouver tous les passages entre **...**
-							const highlightMatches = [...originalText.matchAll(/\*\*(.*?)\*\*/gs)];
+							//const highlightMatches = [...originalText.matchAll(/\*\*(.*?)\*\*/gs)];
 
   							// Créer une copie du texte sans les **...**
-  							let cleanedSynopsis = originalText;
+  							//let cleanedSynopsis = originalText;
 
+							// Appliquer les remplacements dans l'ordre du plus spécifique au plus général
+							let styledText = originalText
+    							.replace(/\*bi\*(.*?)\*\*/gs, "<strong><em>$1</em></strong>")
+    							.replace(/\*b\*(.*?)\*\*/gs, "<strong>$1</strong>")
+    							.replace(/\*i\*(.*?)\*\*/gs, "<em>$1</em>")
+    							.replace(/\*\*(.*?)\*\*/gs, "<strong>$1</strong>"); // pour compatibilité avec **texte**
+
+							// Trouver tous les passages stylisés (optionnel si tu veux les isoler)
+							const highlightMatches = [...styledText.matchAll(/<strong[^>]*>.*?<\/strong>|<em[^>]*>.*?<\/em>/gs)];
+
+							// Créer une copie du texte sans les balises stylisées
+							let cleanedSynopsis = styledText.replace(/<strong[^>]*>.*?<\/strong>|<em[^>]*>.*?<\/em>/gs, "");
+							
   							// On stocke les éléments à afficher avant et après
   							const highlightsBefore = [];
   							const highlightsAfter = [];
