--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         			color: "#F4FFF0" // vert pâle
     			}
 			};
-	
+
 			// ✅ Styliser le contenu du texte
 			function styliserTexte(texte) {
     			if (typeof texte !== "string") return "";
@@ -120,6 +120,7 @@
         			}
         			return html;
     			});
+    			return texte;
 			}
 	
 			// ✅ Nettoyage du contenu
