Update keyword list and add EADC classification

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
-			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erostisme", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
+			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erostisme", "EADC", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
@@ -95,7 +95,10 @@
     			"Déconseillé aux jeunes enfants": {
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // vert pâle
-    			}
+    			},
+				"EADC": {
+        			description: "En attente de classement par la Régie du Cinéma",
+        			color: "#EEEEEE" // gris pâle
 			};
 
 			// ✅ Styliser le contenu du texte
