Update description for EADC classification status

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         			color: "#F4FFF0" // vert pâle
     			},
 				"EADC": {
-        			description: "En attente de classement par la Régie du Cinéma",
+        			description: "En attente de classement",
         			color: "#EEEEEE" // gris pâle
     			}
 			};
