Update base condition for verification logic

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 				}
 
     			// ✅ Ajout de la vérification pour éviter base vide
-				if (!base || base === "ECEADC" || base === "EADC" ) {
-        			base = "EC";
+				if (!base || base === "SCEADC" || base === "EADC" ) {
+        			base = "SC";
     			}
 				
 				return base + "RGB.jpg";
