--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
-			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erotisme", "EADC", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
+			const motsCles = ["DAJE", "Déconseillé aux jeunes enfants", "Erotisme", "EDC", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
@@ -96,7 +96,7 @@
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
         			color: "#F4FFF0" // vert pâle
     			},
-				"EADC": {
+				"SC": {
         			description: "En attente de classement",
         			color: "#EEEEEE" // gris pâle
     			}
@@ -199,7 +199,7 @@
 				}
 
     			// ✅ Ajout de la vérification pour éviter base vide
-				if (!base || base === "SCEADC" || base === "EADC" ) {
+				if (!base) {
         			base = "SC";
     			}
 				
@@ -411,6 +411,11 @@
         						if (cleanedContent !== "") {
             						cleanedContent = ` | ${cleanedContent}`;
         						}
+
+								
+								if (!ratingDetails[film.classification]) {
+    								film.classification = "SC";
+								}
 
         						if (ratingDetails[film.classification]) {
             						classificationDetails = ratingDetails[film.classification].description + " ";
