--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						if (film.thumbnail) {
   							const img = document.createElement("img");
   							img.src = film.thumbnail;
-  							img.alt = `Affiche de ${film.titre}`;
+  							img.alt = `${film.titre}`;
   							img.style.cursor = "pointer";
 
   						// Vérifie si bande_annonce est définie et non vide
